Fix bugs with swagger.json
