# models/tasksModel.js
@@ -5,7 +5,7 @@ module.exports.insert = async ({
 }) => {
   try {
     return {
-      user: (await db.query('INSERT INTO tasks (title, description, status, user_id) VALUES ($1, $2, $3, $4)',
+      task: (await db.query('INSERT INTO tasks (title, description, status, user_id) VALUES ($1, $2, $3, $4)',
         [title, description, status, user_id])),
     };
   } catch (error) {
@@ -20,7 +20,7 @@ module.exports.updateById = async ({ task_id, ...data }) => {
   }
   updData = updData.slice(0, -2);
   try {
-    return { user: (await db.query(`UPDATE tasks SET ${updData} WHERE id = ${task_id}`)) };
+    return { task: (await db.query(`UPDATE tasks SET ${updData} WHERE id = ${task_id}`)) };
   } catch (error) {
     return { error };
   }
@@ -28,7 +28,7 @@ module.exports.updateById = async ({ task_id, ...data }) => {
 
 module.exports.deleteById = async (id) => {
   try {
-    return { user: (await db.query('DELETE FROM tasks WHERE id = $1', [id])) };
+    return { task: (await db.query('DELETE FROM tasks WHERE id = $1', [id])) };
   } catch (error) {
     return { error };
   }
@@ -37,7 +37,7 @@ module.exports.deleteById = async (id) => {
 module.exports.sortBy = async (sort_type, sortdirection = 'asc') => {
   try {
     console.log(`SELECT * FROM tasks ORDER BY ${sort_type} ${sortdirection}`);
-    return { user: (await db.query(`SELECT * FROM tasks ORDER BY ${sort_type} ${sortdirection}`)).rows };
+    return { tasks: (await db.query(`SELECT * FROM tasks ORDER BY ${sort_type} ${sortdirection}`)).rows };
   } catch (error) {
     return { error };
   }
